--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
@@ -25,5 +28,5 @@
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   },
-  "homepage": "https://Luisss003.github.io/Luisss003.github.io"
+  "homepage": "https://Luisss003.github.io/my-portfolio"
 }
